[package]
name = "happylock"
version = "0.1.1"
authors = ["Mica White <botahamec@outlook.com>"]
edition = "2021"
description = "Free deadlock prevention"
documentation = "https://docs.rs/happylock"
readme = "README.md"
repository = "https://github.com/botahamec/happylock/"
license = "CC0-1.0"
keywords = ["deadlock", "mutex", "rwlock"]
categories = ["concurrency"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thread_local = "1"
once_cell = "1"
lock_api = "0.4"
parking_lot = { version = "0.12", optional = true }
spin = { version = "0.9", optional = true }

[features]
default = ["parking_lot"]
