[package]
name = "happylock"
version = "0.3.0"
authors = ["Mica White <botahamec@outlook.com>"]
edition = "2021"
rust-version = "1.65"
description = "Free deadlock prevention"
documentation = "https://docs.rs/happylock"
readme = "README.md"
repository = "https://github.com/botahamec/happylock/"
license = "CC0-1.0"
keywords = ["deadlock", "mutex", "rwlock"]
categories = ["concurrency"]

[dependencies]
thread_local = "1"
once_cell = "1"
lock_api = "0.4"
parking_lot = { version = "0.12", optional = true }
spin = { version = "0.9", optional = true }

[features]
default = ["parking_lot"]
