[package]
name = "happylock"
version = "0.4.3"
authors = ["Mica White <botahamec@outlook.com>"]
edition = "2021"
rust-version = "1.82"
description = "Free deadlock prevention"
documentation = "https://docs.rs/happylock"
readme = "README.md"
repository = "https://github.com/botahamec/happylock/"
license = "CC0-1.0"
keywords = ["deadlock", "mutex", "rwlock"]
categories = ["concurrency"]
include = ["src/**/*", "LICENSE", "README.md"]

[dependencies]
lock_api = "0.4"
parking_lot = { version = "0.12", optional = true }
spin = { version = "0.9", optional = true }

mutants = "0.0.3"  # used to skip functions that can't run

[dev-dependencies]
parking_lot = "0.12"

[features]
default = ["parking_lot"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tarpaulin_include)"] }
